# myelin-accelerator

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW.md  build.rs
.github/: SIGNING.md  actionlint.yaml
.github/workflows/: ci.yml
cu/: common.cuh  satsolver.cu  spiking_network.cu  vector_similarity.cu
docs/: ARCHITECTURE.md
examples/: benchmark.rs
src/: bitpacking.rs  gpu_stub.rs  lib.rs
src/gpu/: accelerator.rs  context.rs  error.rs  kernel.rs  memory.rs  mod.rs
tests/: api_contract.rs
