[package]
name = "myelin-accelerator"
version = "0.9.2"
edition = "2024"
description = "CUDA spiking-network kernels + safe Rust FFI wrappers (Tier 1)"
authors = ["Raul Mc <raulmc@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/rmems/myelin-accelerator"

[lib]
name = "myelin_accelerator"
path = "src/lib.rs"

[dependencies]
cust    = "0.3.2"
anyhow  = { version = "1", features = ["backtrace"] }
tracing = "0.1"

[build-dependencies]
cc = "1.0"
