[package]
name = "myelin-accelerator"
version = "0.9.2"
edition = "2024"
description = "CUDA spiking-network kernels + safe Rust FFI wrappers (Tier 1)"
authors = ["Raul Mc <raulmc@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rmems/myelin-accelerator"

[lib]
name = "myelin_accelerator"
path = "src/lib.rs"

[features]
default = []
cuda = ["dep:cust"]
bench = ["dep:serde", "dep:serde_json"]

[dependencies]
cust      = { version = "0.3.2", optional = true }
anyhow    = { version = "1", features = ["backtrace"] }
tracing   = "0.1"
serde     = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1"

[[example]]
name = "benchmark"
required-features = ["bench"]
