[package]
name = "myelin-accelerator"
version = "0.1.0"
edition = "2024"
description = "CUDA spiking-network kernels + safe Rust FFI wrappers (Tier 1)"
authors = ["Raul Mc <raulmc@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rmems/myelin-accelerator"

[lib]
name = "myelin_accelerator"
path = "src/lib.rs"

[features]
default = []
# nvtx is only used from src/gpu/kernel.rs under the cuda feature.
cuda = ["dep:cust", "dep:nvtx"]
bench = ["dep:serde", "dep:serde_json"]

[dependencies]
cust      = { version = "0.3.2", optional = true }
anyhow    = { version = "1", features = ["backtrace"] }
tracing   = "0.1"
serde     = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
nvtx      = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"

[[example]]
name = "benchmark"
required-features = ["bench"]
